# planner

./: AUTHORS  README.md  meson.build
data/: application.css  com.github.alainm23.planner.appdata.xml  com.github.alainm23.planner.appdata.xml.in  com.github.alainm23.planner.desktop  com.github.alainm23.planner.desktop.in  com.github.alainm23.planner.gresource.xml  com.github.alainm23.planner.gschema.xml  meson.build  stylesheet.css
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: POTFILES.in  com.github.alainm23.planner.pot
src/: Application.vala  MainWindow.vala
src/Constants/: AppSettings.vala
src/Dialogs/: AvatarDialog.vala
src/Interfaces/: List.vala  Project.vala  Task.vala
src/Objects/: Project.vala  Task.vala
src/Services/: Database.vala  Settings.vala
src/Utils/: Files.vala  Utils.vala
src/Views/: IssuesView.vala  OverviewView.vala  ProjectStartupView.vala  TaskView.vala  TasksView.vala  TodayView.vala  WelcomeView.vala  WorkSpaceView.vala
src/Widgets/: AllTaskList.vala  Calendar.vala  CropView.vala  FormatBar.vala  FormatButton.vala  Headerbar.vala  LabelWidget.vala  ListMilestoneRow.vala  ListProgress.vala  MilestoneList.vala  ModelButton.vala  NoteGeneralWidget.vala  NotificationsGrid.vala  PriorityButton.vala  PriorityWidget.vala  ProgressWidget.vala  ProjectButton.vala  ProjectItem.vala  ProjectList.vala  ProjectNew.vala  ProjectNewUpdate.vala  ProjectPopover.vala  ProjectRow.vala  ProjectsList.vala  TaskList.vala  TaskListRow.vala  TaskRow.vala  TasksGrid.vala  TodayNotification.vala  WelcomeView.vala  WorkList.vala
src/Widgets/Popover/: AvatarPopover.vala  FilterListPopover.vala  InfoPopover.vala  LogoPopover.vala  NewEditListPopover.vala  NewListPopover.vala  ProjectItem.vala  ProjectList.vala  ProjectNewUpdate.vala  ProjectPopover.vala  TextFormatPopover.vala
src/Widgets/Popovers/: NewEditProject.vala
